--- a/.github/workflows/aws-auth.yaml
+++ b/.github/workflows/aws-auth.yaml
@@ -2,28 +2,25 @@ name: aws role auth
 on:
   workflow_dispatch:
 env:
-  AWS_REGION : "us-east-1"
+  AWS_REGION : "ap-south-1"
 permissions:
       id-token: write   # This is required for requesting the JWT
       contents: read    # This is required for actions/checkout
 jobs:
   my_job:
     name: deploy to staging
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v3
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::430118834478:role/gh-actions-role
+          role-to-assume: arn:aws:iam::430118834478:role/gh-actions-role-sc
           aws-region: ${{ env.AWS_REGION }}
       - id: install-aws-cli
-        uses: unfor19/install-aws-cli-action@v1
-        with:
-          version: 2                         # default
-          verbose: false                     # default
-          arch: amd64                        # allowed values: amd64, arm64
+        uses: chrislennon/action-aws-cli@v1.1
+
       - name: aws cli 
         run: |
           aws sts get-caller-identity
